--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -2,7 +2,7 @@
   gather_facts: False
   pre_tasks:
   - name: Copy python interpreter to server
-    local_action: command scp files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ ansible_ssh_user }}/
+    local_action: command scp files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/
   roles: 
     - coreos_bootstrap
 
