--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -1,5 +1,6 @@
 - hosts: coreos
   gather_facts: False
+  user: "{{ remote_user }}" 
   pre_tasks:
   - name: Copy python interpreter to server
     local_action: command scp files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/
