--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -63,12 +63,12 @@
     - name: Find overlay pids to kill
       shell: "lsof | grep '/var/lib/docker/overlay' | awk '{print $2}'"
       register: overlay_pids
-      when: unmount_result != 0 and 'busy' in unmount_result.stderr
+      when: unmount_result.stderr | search("busy")
 
     - name: Kill running overlay pids
       shell: "kill -9 {{ item }}"
       with_items: "{{ overlay_pids.stdout_lines }}"
-      when: overlay_pids is defined and overlay_pids | length > 0
+      when: unmount_result.stderr | search("busy") and overlay_pids | length > 0
 
     - name: Get mounted kubelet resources
       shell: "mount | grep /var/lib/kubelet/pods | cut -d ' ' -f 3"
