--- a/roles/coreos_bootstrap/tasks/main.yml
+++ b/roles/coreos_bootstrap/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Check if bootstrap is needed
   raw: stat $HOME/.bootstrapped
   register: need_bootstrap
+  changed_when: false
   ignore_errors: yes
 
 - name: Run bootstrap.sh
