--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -6,6 +6,7 @@
     local_action: command scp files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/
   roles:
     - coreos_bootstrap
+  changed_when: false
 
 - hosts: localhost
   tasks:
