Fixed bug in coreos setup for certificate link from docker internal repo

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -325,7 +325,7 @@
     file: state=directory path=/etc/docker/certs.d/docker.adeo.no:5000/
 
   - name: Symlink Internal CA to docker
-    file: src=/etc/ssl/certs/NAV_Issuing_Intern_CA.crt dest=/etc/docker/certs.d/docker.adeo.no:5000/ca.crt state=link force=yes
+    file: src=/etc/ssl/certs/NAV_Issuing_Intern_CA{{ cert_postfix }} dest=/etc/docker/certs.d/docker.adeo.no:5000/ca.crt state=link force=yes
 
   - name: Copy kubelet service manifest
     template: src=templates/worker-kubelet.service.j2 dest=/etc/systemd/system/kubelet.service
