Added kernel settings for max_user_watches

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -222,6 +222,17 @@
     tags:
       - skip_ansible_lint
 
+  - name: Set kernel parameters
+    sysctl: 
+      name={{ item.kname }} 
+      value={{ item.kvalue }} 
+      state=present 
+      sysctl_file=/etc/sysctl.d/60-sysctl.conf 
+      sysctl_set=yes 
+      reload=yes
+    with_items:
+      - { kname: 'fs.inotify.max_user_watches', kvalue: '16384' }
+
   handlers:
     - name: restart_docker
       systemd:
