also check for puppet enterprise

--- a/roles/k8s_common/tasks/main.yml
+++ b/roles/k8s_common/tasks/main.yml
@@ -10,7 +10,7 @@
 
 # Check if puppet-agent exist
 - name: Check if puppet is installed
-  command: rpm -q puppet
+  shell: rpm -q puppet || rpm -q pe-puppet
   ignore_errors: yes
   register: puppet_agent_rpm_check
   tags:
