--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -519,6 +519,8 @@
   - name: Copy sensu client.json with correct config
     template: src=templates/sensu/master-client.json.j2 dest=/etc/sensu/conf.d/client.json
     when: sensu_rpm_check.rc == 0
+    notify:
+      - restart_sensu
 
   - name: Ensure sensu monitoring config for master node exists
     copy: src=files/sensu/config/nais_master_metrics.json dest=/etc/sensu/conf.d/nais_master_metrics.json
@@ -545,6 +547,8 @@
   - name: Copy sensu client.json with correct config
     template: src=templates/sensu/worker-client.json.j2 dest=/etc/sensu/conf.d/client.json
     when: sensu_rpm_check.rc == 0
+    notify:
+      - restart_sensu
 
   - name: Ensure sensu monitoring config for worker nodes exist
     copy: src=files/sensu/config/nais_worker_metrics.json dest=/etc/sensu/conf.d/nais_worker_metrics.json
