--- a/roles/proxy/tasks/main.yml
+++ b/roles/proxy/tasks/main.yml
@@ -1,8 +1,12 @@
 - name: Ensure directories exist
-  file: state=directory path={{ cert_dir }}
+  file:
+    state: directory
+    path: "{{ cert_dir }}"
 
 - name: Install proxy cert
-  copy: src=files/webproxy.crt dest={{ cert_dir }}/webproxy{{ cert_postfix }}
+  copy:
+    src: "{{ role_path }}/files/webproxy.crt"
+    dest: "{{ cert_dir }}/webproxy{{ cert_postfix }}"
 
 - name: update_cert_index
   command: "{{ cert_bin }}"
