--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -1,20 +1,32 @@
 - name: Ensure PKI directory exists
-  file: state=directory path=target/pki/
+  file:
+    state: directory
+    path: target/pki/
 
 - name: Ensure master directory exists
-  file: state=directory path=target/pki
+  file:
+    state: directory
+    path: target/pki
 
 - name: Ensure worker directory exists
-  file: state=directory path=target/pki/worker
+  file:
+    state: directory
+    path: target/pki/worker
 
 - name: Generate ca-csr.json
-  template: src=templates/ca-csr.j2 dest=target/pki/ca-csr.json
+  template:
+    src: "{{ role_path }}/templates/ca-csr.j2"
+    dest: target/pki/ca-csr.json
 
 - name: Generate kube-apiserver-csr.json
-  template: src=templates/kube-apiserver-server-csr.j2 dest=target/pki/kube-apiserver-server-csr.json
+  template:
+    src: "{{ role_path }}/templates/kube-apiserver-server-csr.j2"
+    dest: target/pki/kube-apiserver-server-csr.json
 
 - name: Copy ca-config.json
-  copy: src=files/ca-config.json dest=target/pki/ca-config.json
+  copy:
+    src: "{{ role_path }}/files/ca-config.json"
+    dest: target/pki/ca-config.json
 
 - name: Initializing the CA
   shell: bin/cfssl gencert -initca target/pki/ca-csr.json | bin/cfssljson -bare target/pki/ca
@@ -22,7 +34,7 @@
     creates: target/pki/ca.pem
 
 - name: Creating admin certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client files/admin-csr.json | bin/cfssljson -bare target/pki/admin
+  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client {{ role_path }}/files/admin-csr.json | bin/cfssljson -bare target/pki/admin"
   args:
     creates: target/pki/admin.pem
 
@@ -32,7 +44,7 @@
     creates: target/pki/kube-apiserver-server.pem
 
 - name: Creating traefik certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server files/traefik-csr.json | bin/cfssljson -bare target/pki/traefik
+  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server {{ role_path }}/files/traefik-csr.json | bin/cfssljson -bare target/pki/traefik"
   args:
     creates: target/pki/traefik.pem
 
