--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -9,11 +9,12 @@
 
 - name: Copy etcd certificate
   copy:
-    src: "/target/pki/{{ item }}"
+    src: "target/pki/{{ item }}"
     dest: "/etc/etcd/certs/"
   with_items:
     - etcd.pem
     - etcd-key.pem
+    - ca.pem
 
 - name: Download and copy etcd binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
   environment: "{{ proxy_env }}"
