--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -57,6 +57,8 @@
     command: "{{ install_dir }}/bin/etcdctl ls /nais/network/config"
     environment:
       - ETCDCTL_API: 2
+      - ETCDCTL_CA_FILE: /etc/etcd/certs/ca.pem
+      - ETCDCTL_ENDPOINT: https://127.0.0.1:2379
     register: flannelconfig
     ignore_errors: yes
     changed_when: false
@@ -65,6 +67,8 @@
     shell: '"{{ install_dir }}"/bin/etcdctl set /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
     environment:
       - ETCDCTL_API: 2
+      - ETCDCTL_CA_FILE: /etc/etcd/certs/ca.pem
+      - ETCDCTL_ENDPOINT: https://127.0.0.1:2379
     when: flannelconfig.rc != 0
 
 # Configure kubernetes Master node
