Bruker nå klient-sertifikat for å kommunisere med etcd

--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -48,7 +48,7 @@
   args:
     creates: target/pki/etcd.pem
 
-- name: Creating etcd certificate
+- name: Creating etcd client certificate
   shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd-client
   args:
     creates: target/pki/etcd-client.pem
