Lagt til peer, og lager etcd nøkkel for server, client, peer

--- a/roles/create_certificates/files/ca-config.json
+++ b/roles/create_certificates/files/ca-config.json
@@ -19,6 +19,15 @@
           "client auth"
         ],
         "expiry": "69690h"
+      },
+      "peer": {
+        "usages": [
+          "signing",
+          "key encipherment",
+          "server auth",
+          "client auth"
+        ],
+        "expiry": "69690h"
       }
     }
   }
