--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -1,17 +1,12 @@
 - name: Ensure PKI directory exists
   file:
     state: directory
-    path: target/pki/
-
-- name: Ensure master directory exists
-  file:
-    state: directory
-    path: target/pki
-
-- name: Ensure worker directory exists
-  file:
-    state: directory
-    path: target/pki/worker
+    path: "{{ item }}"
+  with_items:
+    - target
+    - target/pki
+    - target/pki/worker
+    - target/pki/etcd
 
 - name: Generate ca-csr.json
   template:
@@ -44,14 +39,21 @@
     creates: target/pki/admin.pem
 
 - name: Creating etcd certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd
+  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/client
   args:
-    creates: target/pki/etcd.pem
+    creates: target/pki/etcd/client.pem
 
 - name: Creating etcd client certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd-client
+  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/etcd
   args:
-    creates: target/pki/etcd-client.pem
+    creates: target/pki/etcd/etcd.pem
+
+- name: Creating etcd peer certificate
+  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=peer target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}
+  args:
+    creates: target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}.pem
+  with_items:
+    - "{{ groups.etcd }}"
 
 - name: Creating kube apiserver certificate
   shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/kube-apiserver-server-csr.json | bin/cfssljson -bare target/pki/kube-apiserver-server
