https og sertifikater på kommunikasjon

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -57,8 +57,8 @@
     command: "{{ install_dir }}/bin/etcdctl ls /nais/network/config"
     environment:
       - ETCDCTL_API: 2
-      - ETCDCTL_CERT_FILE: /etc/etcd/certs/etcd-client.pem
-      - ETCDCTL_KEY_FILE: /etc/etcd/certs/etcd-client-key.pem
+      - ETCDCTL_CERT_FILE: /etc/etcd/certs/etcd.pem
+      - ETCDCTL_KEY_FILE: /etc/etcd/certs/etcd-key.pem
       - ETCDCTL_CA_FILE: /etc/etcd/certs/ca.pem
       - ETCDCTL_ENDPOINT: https://127.0.0.1:2379
     register: flannelconfig
@@ -69,8 +69,8 @@
     shell: '"{{ install_dir }}"/bin/etcdctl set /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
     environment:
       - ETCDCTL_API: 2
-      - ETCDCTL_CERT_FILE: /etc/etcd/certs/etcd-client.pem
-      - ETCDCTL_KEY_FILE: /etc/etcd/certs/etcd-client-key.pem
+      - ETCDCTL_CERT_FILE: /etc/etcd/certs/etcd.pem
+      - ETCDCTL_KEY_FILE: /etc/etcd/certs/etcd-key.pem
       - ETCDCTL_CA_FILE: /etc/etcd/certs/ca.pem
       - ETCDCTL_ENDPOINT: https://127.0.0.1:2379
     when: flannelconfig.rc != 0
@@ -81,7 +81,9 @@
   become: yes
   tasks:
   - name: Copy certificates
-    copy: src=target/pki/{{ item }} dest=/etc/kubernetes/pki/
+    copy:
+      src: "target/pki/{{ item }}"
+      dest: /etc/kubernetes/pki/
     with_items:
       - admin.pem
       - admin-key.pem
@@ -93,6 +95,8 @@
       - sa.pub
       - traefik.pem
       - traefik-key.pem
+      - etcd/etcd.pem
+      - etcd/etcd-key.pem
 
 - hosts: masters:workers
   user: "{{ remote_user }}"
