Flyttet fix for 32728 slik at den omfatter både RHEL og Container linux. La til deaktivering av service og fjerning av systemd unit-file i teardown-playbook.yaml

--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -11,6 +11,17 @@
     command: "{{ cert_bin }}"
     changed_when: false
 
+  - name: Disable the fix for 32728
+    systemd:
+      name: kube-issue-32728-fix.service
+      state: stopped
+      enabled: no
+
+  - name: Remove systemd unit file for 32728 fix (symlinks in /sys)
+    file:
+      path: /etc/systemd/system/kube-issue-32728-fix.service
+      state: absent
+
 - hosts: masters:workers
   user: "{{ remote_user }}"
   become: yes
