--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -21,6 +21,21 @@
   become: yes
   roles:
   -  { role: proxy, when: nais_http_proxy is defined }
+  tasks:
+  - name: Add systemd unit to fix issue 32728 (symlinks in /sys)
+    copy:
+      src: files/kube-issue-32728-fix.service
+      dest: /etc/systemd/system/kube-issue-32728-fix.service
+      owner: root
+      group: root
+      mode: 0644
+
+  - name: Enable the fix for 32728 during boot
+    systemd:
+      daemon_reload: yes
+      name: kube-issue-32728-fix.service
+      state: started
+      enabled: yes
 
 - hosts: masters:workers
   user: "{{ remote_user }}"
