Manglet etcd-sertifikater for flannel på ikke masters

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -345,6 +345,8 @@
       - admin.pem
       - admin-key.pem
       - ca.pem
+      - etcd/etcd.pem
+      - etcd/etcd-key.pem
     notify:
       - restart_kubelet
       - restart_kubeproxy
