State er stopped, og setter absent på et hakk lengre opp

--- a/clean-etcd-playbook.yaml
+++ b/clean-etcd-playbook.yaml
@@ -2,12 +2,14 @@
   user: "{{ remote_user }}"
   become: yes
   tasks:
-    - name: Etcd
+    - name: Ensure Etcd is stopped
       systemd:
         daemon_reload: yes
         name: etcd.service
-        state: stop
+        state: stopped
       ignore_errors: yes
 
     - name: Remove old cache
-      command: rm -r /var/lib/etcd/
+      file:
+        path: /var/lib/etcd/
+        state: absent
