Use timezone module instead of command to set the time zone.

--- a/roles/coreos_bootstrap/tasks/main.yml
+++ b/roles/coreos_bootstrap/tasks/main.yml
@@ -22,4 +22,5 @@
 
 - name: Setup timezone
   become: yes
-  command: timedatectl set-timezone {{ timezone }}
+  timezone:
+    name: "{{ timezone }}"
