Add bigip_pool role
This role adds nodes to a given bigip pool.
Running this role for "workers:!storage" ensures all workers that will
run traefik are present in the given bigip pool.

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -585,3 +585,7 @@
       daemon_reload: yes
       name: sensu-client.service
       state: restarted
+
+- hosts: workers:!storage
+  roles:
+  - bigip_pool
