Move conditional from bigip role to playbook
To prevent loading the bigip role unnecessarily

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -19,7 +19,9 @@
 - hosts: workers:!storage
   user: "{{ remote_user }}"
   roles:
-  - bigip_pool
+    - { role: bigip_pool
+      , when: bigip_address is defined and bigip_pool_name is defined
+      }
 
 - hosts: all
   user: "{{ remote_user }}"
