--- a/roles/bigip_pool/tasks/main.yml
+++ b/roles/bigip_pool/tasks/main.yml
@@ -5,5 +5,6 @@
     pool: "{{ bigip_pool_name }}"
     partition: AutoProv
     host: "{{ ansible_default_ipv4['address'] }}"
+    validate_certs: no
     port: 443
   delegate_to: localhost
