--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -5,6 +5,22 @@
   with_items:
     - "{{ install_dir }}/bin"
     - /var/lib/etcd
+    - /etc/ssl/etcd
+
+- name: Copy etcd certificate
+  copy:
+    src: "target/pki/{{ item }}"
+    dest: "/etc/ssl/etcd/"
+  with_items:
+    - ca.pem
+    - /etcd/etcd.pem
+    - /etcd/etcd-key.pem
+    - /etcd/client.pem
+    - /etcd/client-key.pem
+    - "etcd/peer-{{ ansible_hostname }}.pem"
+    - "etcd/peer-{{ ansible_hostname }}-key.pem"
+  notify:
+    - restart_etcd
 
 - name: Download and copy etcd binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
   environment: "{{ proxy_env }}"
