--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -19,17 +19,29 @@
 - hosts: workers:!storage_nodes
   user: "{{ remote_user }}"
   tasks:
-  - name: Add pool member
-    when: bigip_address is defined and bigip_pool_name is defined
+  - name: Gather bigip facts
+    when: bigip_pool_name is defined and bigip_partition is defined
+    delegate_to: localhost
+    bigip_facts:
+      server: "{{ item }}"
+      include: "device,device_group,system_info"
+      validate_certs: no
+    with_items:
+    - "{{ groups['bigips'] }}"
+
+  - name: Add pool member to first bigip
+    when: bigip_pool_name is defined and bigip_partition is defined device['/Common/' + system_info.system_information.host_name].failover_state == "HA_STATE_ACTIVE"
+    delegate_to: localhost
     bigip_pool_member:
       state: present
-      partition: AutoProv
-      server: "{{ bigip_address }}"
+      partition: "{{ bigip_partition }}"
+      server: "{{ item }}"
       pool: "{{ bigip_pool_name }}"
       host: "{{ ansible_default_ipv4['address'] }}"
       validate_certs: no
       port: 443
-    delegate_to: localhost
+    with_items:
+    - "{{ groups['bigips'] }}"
 
 - hosts: all
   user: "{{ remote_user }}"
