Don't run "all" task on bigips.

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -46,7 +46,7 @@
 #    with_items:
 #    - "{{ groups['bigips'] }}"
 
-- hosts: all
+- hosts: all:!bigips
   user: "{{ remote_user }}"
   become: yes
   roles:
