--- a/roles/fetch_existing_certificates/tasks/etcd.yaml
+++ b/roles/fetch_existing_certificates/tasks/etcd.yaml
@@ -1,6 +1,8 @@
 - name: Fetch Etcd-peer certificates
   include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
   with_items:
+    - etcd.pem
+    - etcd-key.pem
     - client.pem
     - client-key.pem
     - "peer-{{ ansible_hostname }}.pem"
