Lagt til ca.pem, gjør tasken mer selvstending

--- a/roles/fetch_existing_certificates/tasks/etcd.yaml
+++ b/roles/fetch_existing_certificates/tasks/etcd.yaml
@@ -1,4 +1,4 @@
-- name: Fetch Etcd-peer certificates
+- name: Fetch Etcd certificates
   include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
   with_items:
     - etcd.pem
@@ -10,3 +10,11 @@
   vars:
     src_path: /etc/ssl/etcd
     dest_path: target/pki/etcd
+
+- name: Fetch ca.pem
+  include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
+  with_items:
+    - ca.pem
+  vars:
+    src_path: /etc/ssl/etcd
+    dest_path: target/pki/
