--- a/roles/fetch_existing_certificates/tasks/etcd.yaml
+++ b/roles/fetch_existing_certificates/tasks/etcd.yaml
@@ -5,6 +5,14 @@
     - etcd-key.pem
     - client.pem
     - client-key.pem
+  vars:
+    src_path: /etc/ssl/etcd
+    dest_path: target/pki/etcd
+  run_once: true
+
+- name: Fetch Etcd peer-certificates
+  include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
+  with_items:
     - "peer-{{ ansible_hostname }}.pem"
     - "peer-{{ ansible_hostname }}-key.pem"
   vars:
