--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -40,7 +40,7 @@
 
     - name: Stop services
       command: timeout 15 /bin/systemctl stop {{ item }}
-      with_items:
+      loop:
         - kubelet
         - docker
       ignore_errors: yes
@@ -48,7 +48,7 @@
 
     - name: Disable services
       command: timeout 15 /bin/systemctl disable {{ item }}
-      with_items:
+      loop:
         - kubelet
         - docker
       ignore_errors: yes
@@ -56,7 +56,7 @@
 
     - name: Remove files
       file: path={{ item }} state=absent
-      with_items:
+      loop:
         - /etc/systemd/system/docker.service.d
         - /etc/systemd/system/kubelet.service
         - /etc/kubernetes
@@ -78,7 +78,7 @@
 
     - name: Kill running overlay pids
       shell: "kill -9 {{ item }}"
-      with_items: "{{ overlay_pids.stdout_lines }}"
+      loop: "{{ overlay_pids.stdout_lines|flatten(levels=1) }}"
       when: unmount_result.stderr | search("busy") and overlay_pids | length > 0
 
     - name: Get mounted kubelet resources
@@ -92,7 +92,7 @@
     - name:  umount kubelet resources
       command: "umount {{ item }}"
       when: kubelet_resources.stdout_lines|length > 0
-      with_items: "{{ kubelet_resources.stdout_lines }}"
+      loop: "{{ kubelet_resources.stdout_lines|flatten(levels=1) }}"
 
 - hosts: masters
   user: "{{ remote_user }}"
@@ -100,7 +100,7 @@
   tasks:
     - name: Remove files
       file: path={{ item }} state=absent
-      with_items:
+      loop:
         - /root/.helm/repository/repositories.yaml
         - "{{ install_dir }}/bin/helm-{{helm_version}}"
         - "{{ install_dir }}/bin/helm"
@@ -115,7 +115,7 @@
       ignore_errors: yes
     - name: Remove files
       file: path={{ item }} state=absent
-      with_items:
+      loop:
         - "{{ install_dir }}/bin/etcd-{{etcd_version}}"
         - "{{ install_dir }}/bin/etcd"
         - "{{ install_dir }}/bin/etcdctl-{{etcd_version}}"
@@ -128,9 +128,9 @@
   become: yes
   tasks:
     - name: Remove files
-      file: path={{ item }} state=absent
-      with_items:
-        - /etc/sensu/conf.d/nais_worker_metrics.json
+      file:
+        path: /etc/sensu/conf.d/nais_worker_metrics.json
+        state: absent
 
 - hosts: localhost
   tasks:
@@ -146,14 +146,14 @@
       name={{ item }}
       state=stopped
       enabled=no
-    with_items:
+    loop:
       - kube-proxy
       - flannel
     ignore_errors: yes
 
   - name: Remove files
     file: path={{ item }} state=absent
-    with_items:
+    loop:
       - /etc/systemd/system/kubelet.service
       - "{{ install_dir }}/bin/kube-proxy*"
       - "{{ install_dir }}/bin/kubelet*"
